cmake_minimum_required(VERSION 3.5)
project(RobotMaze)
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
set(CMAKE_CXX_STANDARD 11)

file(GLOB MAZE "Maze/src/*.cpp")
file(GLOB DATA_STRUCTURE "data_structure/src/*.cpp")
file(GLOB AGENT "agent/src/*.cpp")
INCLUDE_DIRECTORIES(Maze/inc)
INCLUDE_DIRECTORIES(data_structure/inc)
INCLUDE_DIRECTORIES(agent/inc)
ADD_EXECUTABLE(main ${MAZE} ${DATA_STRUCTURE} ${AGENT} main.cpp)
